Resolve problem with filtering short transit legs with more walking